# llm-agent-linkedin-page-manager

./: .gitignore  Dockerfile  LICENSE.txt  README.md  app.py  pyproject.toml  requirements.txt  run.sh
linkedin-llm-agent/: sample.py
linkedin_llm_agent/: idea_generation.py  post_generation.py  prompts.py
linkedin_llm_agent/tools/: call_llm.py  get_linkedin_profile_info.py  news_search.py  web_report.py  web_search.py
research/: 1.ipynb  Agentify_MVP_draft.ipynb  content_plan_from profile.ipynb  data.json  get_linkedin_info.py
streamlit-ui/: generate_ideas.py  generate_post.py
